--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -67,12 +67,8 @@
 					<th rowspan="2" th:text="#{nom}"></th>
 					<th rowspan="2" th:text="#{ruche}"></th>
 					<th rowspan="2" th:text="#{rucher}"></th>
-					<th:block th:if="${session.voirInactif}">
-
-						<th colspan="4" th:text="#{sortie}" style="text-align: center"
-							data-dt-order="disable"></th>
-
-					</th:block>
+					<th th:if="${session.voirInactif}" colspan="4" th:text="#{sortie}"
+						style="text-align: center" data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{dateAcquisition}"></th>
 					<th rowspan="2" th:text="#{origine}"></th>
 					<th colspan="3" th:text="#{Reine}" style="text-align: center"
@@ -84,14 +80,12 @@
 					<th rowspan="2" th:text="#{commentaire}"></th>
 				</tr>
 				<tr>
-
 					<th:block th:if="${session.voirInactif}">
 						<th th:text="#{actif}"></th>
 						<th th:text="#{type}"></th>
 						<th th:text="#{date}"></th>
 						<th th:text="#{commentaire}"></th>
 					</th:block>
-
 					<th th:text="#{marque}"></th>
 					<th th:text="#{couleur}"></th>
 					<th th:text="#{naissance}"></th>
@@ -136,10 +130,12 @@
 					<th th:text="#{rucher}"></th>
 					<th:block th:if="${session.voirInactif}">
 						<th th:text="#{actif}"></th>
+						<th th:text="#{type}"></th>
 						<th th:text="#{dateDispersion}"></th>
 						<th th:text="#{commDisp}"></th>
 					</th:block>
 					<th th:text="#{dateAcquisition}"></th>
+					<th th:text="#{origine}"></th>
 					<th th:text="#{marque}"></th>
 					<th th:text="#{couleur}"></th>
 					<th th:text="#{naissance}"></th>
