--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -100,7 +100,7 @@
 						<th th:text="#{commDisp}"></th>
 					</th:block>
 					<th th:text="#{dateAcquisition}"></th>
-					<th th:text="#{origine}"></th>
+					<th th:text="#{Origine}"></th>
 					<th th:text="#{reineMarquee}"></th>
 					<th th:text="#{reineCouleurMarquage}"></th>
 					<th th:text="#{reineDateNaissance}"></th>
