--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -70,7 +70,7 @@
 					<th th:if="${session.voirInactif}" colspan="4" th:text="#{sortie}"
 						style="text-align: center" data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{dateAcquisition}"></th>
-					<th rowspan="2" th:text="#{origine}"></th>
+					<th rowspan="2" th:text="#{Origine}"></th>
 					<th colspan="3" th:text="#{Reine}" style="text-align: center"
 						data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{souche}"></th>
