--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -44,9 +44,9 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-					<th:block th:text="#{Distances}+' '"></th:block>
 					<a th:href="@{'/rucher/'+${rucher.id}}"
 						th:text="#{rucher} + ' ' + ${rucher.nom}"></a>
+					<th:block th:text="#{sep} + #{Distances}"></th:block>
 				</h1>
 			</div>
 			<div class="col">
