--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -49,7 +49,7 @@
 				<tr th:each="evenement : ${evenements}">
 					<td><a
 						th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-						th:href="@{'/evenement/'+${evenement.id}}"></a></td>
+						th:href="@{'/evenement/'+${evenement.id}+'?type=notif'}"></a></td>
 					<td th:text="#{${evenement.type}}"></td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
