--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -95,7 +95,7 @@
 				<tr>
 					<th th:text="#{actif}"></th>
 					<th:block th:unless="${essaim.actif}">
-						<th th:text="#{sortie}"></th>
+						<th th:text="#{Sortie}"></th>
 						<th th:text="#{dateDispersion}"></th>
 						<th th:text="#{commDisp}"></th>
 					</th:block>
