--- a/src/main/resources/templates/essaim/essaimDispersionLotForm.html
+++ b/src/main/resources/templates/essaim/essaimDispersionLotForm.html
@@ -57,7 +57,7 @@
 					<option
 						th:each="sortie : ${T(ooioo.ruches.essaim.ReineSortie).values()}"
 						th:value="${sortie}" th:text="#{${sortie}}"></option>
-				</select> <label class="form-label" for="sortie" th:text="#{sortie}"></label>
+				</select> <label class="form-label" for="sortie" th:text="#{Sortie}"></label>
 			</div>
 			<div th:replace="~{includeForm :: date}"></div>
 			<div th:replace="~{includeForm :: commentaire}"></div>
