--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -94,7 +94,7 @@
 							<option
 								th:each="sortie : ${T(ooioo.ruches.essaim.ReineSortie).values()}"
 								th:value="${sortie}" th:text="#{${sortie}}"></option>
-						</select> <label class="form-label" for="sortie" th:text="#{sortie}"></label>
+						</select> <label class="form-label" for="sortie" th:text="#{Sortie}"></label>
 					</div>
 					<!--/* on force l'id pour datetimepicker sur #date 
 						https://stackoverflow.com/questions/75988981/does-thymeleafs-thfield-generate-an-id-attribute-too
