--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -67,7 +67,7 @@
 					<th rowspan="2" th:text="#{nom}"></th>
 					<th rowspan="2" th:text="#{ruche}"></th>
 					<th rowspan="2" th:text="#{rucher}"></th>
-					<th th:if="${session.voirInactif}" colspan="4" th:text="#{sortie}"
+					<th th:if="${session.voirInactif}" colspan="4" th:text="#{Sortie}"
 						style="text-align: center" data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{dateAcquisition}"></th>
 					<th rowspan="2" th:text="#{Origine}"></th>
