ages des reines, ajouté option actif true/false

--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -48,7 +48,7 @@
 					aria-hidden="true"></a> &nbsp; <a
 					th:href="@{/essaim/statistiques?masquerInactif=on}"
 					class="bi-table" th:title="#{statistiquesproduction}"
-					aria-hidden="true"></a> <a th:href="@{/essaim/statistiquesage}"
+					aria-hidden="true"></a> <a th:href="@{/essaim/statistiquesage?actif=true}"
 					class="bi-bar-chart" th:title="#{statistiquesage}"
 					aria-hidden="true"></a> &nbsp; <a
 					th:href="@{'/essaim/grapheEssaims'}" class="bi-graph-up"
