répertoire ruches-52 et doc âge des reines

--- a/src/main/resources/templates/essaim/essaimsStatAges.html
+++ b/src/main/resources/templates/essaim/essaimsStatAges.html
@@ -8,16 +8,13 @@
 <script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported agesHisto, pas, ageDesReines, nbReinesTotal, Reines,
-	     buttontextprint, buttontextcol
+	/* exported agesHisto, pas, ageDesReines, nbReinesTotal, Reines
 	 */
 	const pas = /*[[${pas}]]*/null;
 	const agesHisto = /*[[${agesHisto}]]*/null;
 	const ageDesReines = /*[[#{ageDesReines}]]*/null;
 	const nbReinesTotal = /*[[#{nbReinesTotal}]]*/null;
 	const Reines = /*[[#{Reines}]]*/null;
-	const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
-	const buttTxtCol = /*[[#{buttontextcol}]]*/null;
 </script>
 </head>
 <body>
