EssaimService.java ajouté @Value. inactives type de sorties à ignorer

--- a/src/main/resources/templates/essaim/essaimsStatAges.html
+++ b/src/main/resources/templates/essaim/essaimsStatAges.html
@@ -8,12 +8,12 @@
 <script th:replace="~{include :: d3-scale-chromatic}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported agesHisto, pas, ageDesReines, nbReinesTotal, Reines
+	/* exported agesHisto, pas, ageDesReines, nbReines, Reines, mois
 	 */
 	const pas = /*[[${pas}]]*/null;
 	const agesHisto = /*[[${agesHisto}]]*/null;
 	const ageDesReines = /*[[#{ageDesReines}]]*/null;
-	const nbReinesTotal = /*[[#{nbReinesTotal}]]*/null;
+	const nbReines = /*[[#{nbReines}]]*/null;
 	const Reines = /*[[#{Reines}]]*/null;
 	const mois = /*[[#{mois}]]*/null;
 </script>
